# cambrian-stack

./: .gitignore  PLAN.md  README.md  example_train.sh  pyproject.toml
.github/workflows/: docs.yml
cambrian/: cli.py  data.py  diffusion.py  distributed.py  tokenizer.py  train_diffusion.py  train_transformer.py  training.py  utils.py
configs/: baseline_transformer.yaml  basic_transformer.yaml  diffusion_transformer.yaml
docs/: Makefile  conf.py  configuration.rst  experiments.rst  faq.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst
scripts/: eval_checkpoint.sh  eval_diffusion.sh  find_batch_size.py  launch_dual_training.sh  nano_diffusion_tiny_stories.sh  nano_transformer_tiny_stories.sh  train_baseline_transformer.sh  train_diffusion.sh  train_nanochat_sanity.sh  train_nanochat_speedrun.sbatch  train_nanochat_speedrun.sh  train_tinystories_sanity.sbatch  train_transformer_all.sh
src/cambrian_stack/: __init__.py  eval_checkpoint.py  eval_diffusion.py  speedrun.py  train.py
src/cambrian_stack/conf/: baseline_fineweb.yaml  baseline_fineweb_nanochat.yaml  baseline_fineweb_nanochat_d32.yaml  baseline_transformer.yaml  diffusion_transformer.yaml  speedrun.yaml
src/cambrian_stack/data_loaders/: __init__.py  tiny_stories.py
src/cambrian_stack/evaluation/: __init__.py  diffusion_metrics.py  metrics.py
src/cambrian_stack/experiments/: __init__.py  autoregressive.py  base.py  diffusion.py  transforms.py
src/cambrian_stack/models/: __init__.py  base.py  diffusion_transformer.py  nanochat_gpt.py  transformer.py
src/cambrian_stack/optim/: __init__.py  muon.py
src/cambrian_stack/training/: __init__.py  trainer.py
src/cambrian_stack/utils/: __init__.py  logging.py
tests/: conftest.py  test_diffusion_data.py  test_diffusion_transformer.py  test_experiments.py  test_lr_schedule.py  test_models.py
(+16 files in other folders)
