[project]
name = "cambrian"
version = "0.1.0"
description = "Training stack for transformers, diffusion, and other architectures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.0",
    "loguru>=0.7.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "tqdm>=4.66.0",
    "transformers>=4.57.1",
    "typer>=0.9.0",
    "wandb>=0.22.3",
]

[project.scripts]
cambrian = "cambrian.cli:app"

[tool.setuptools]
packages = ["cambrian"]
